# glfw-dearimgui-demo

./: .gitignore  CMakeLists.txt  ReadMe.md  make.cmd
cmake/: deps.cmake  find_libraries.cmake
cmake/libs/: dearimgui.cmake  glfw3.cmake
cmake/modules/: DearImgui.cmake  GLFW.cmake
source/: main.cc
source/app/: CMakeLists.txt  app.cc  app.hh  app_design.cc  app_design.hh  app_imgui.cc  app_imgui.hh  app_window.cc  app_window.hh  main.cpp
